# Developer-Notes

./: .gitignore  C++ Notes.docx  Create_Singleton.cpp  Ethical Hacking.docx  File Sharing on Linux.txt  Flashcards.pptx  Make .out into .exe.txt  PHP & Node.js Notes.docx  Setting Up GitHub Key.txt  System Crash Fixes.txt  postgres_with_cpp.cpp
Ada/: AdaNotes.txt  CHARACTS.TXT  Strings.txt  helloworld.adb  practice.adb  someWebpage.html  test.txt
Ada/package/: mypackage.adb  mypackage.ads  mypackage.ali  package2.adb  package2.ads  package2.ali  program  program.adb  program.ali
BASH/: .bash_aliases  Create ISO.txt  Linux Terminal Tweaks  MiscBashCommands.txt  SSH and FTP Servers.txt  Shell Scripting in BASH.docx  Users and Permissions.txt  Using the Linux Terminal.docx
CMake/: CMakeLists.txt  calculator.cpp  calculator.h  readme.txt  textOutputter.cpp
CMake/Advanced CMake/: CMakeLists.txt  building.h  calculator.h  main.cpp  readme.txt  textOutputter.h
CMake/Advanced CMake/newSubDir/: CMakeLists.txt  subDirLib.cpp  subDirLib.h
CMake/Advanced CMake/optionalSubDir/: CMakeLists.txt  optionalCode.cpp  optionalCode.h
CMake/Advanced CMake/tools/: aliases
CMake/Basic CMake/: main.cpp
CMake/CMake-Nested_Directories/: CMakeLists.txt  main.cpp  readme.md
CMake/CMake-Nested_Directories/subDir/: CMakeLists.txt  newTarget.cpp  newTarget.h
CMake/CMake-Nested_Directories/subDir/headers/: newTarget1.h
CMake/CMake-Nested_Directories/subDir/sources/: newTarget1.cpp
CMake/CMake-Nested_Directories/subDir/subDir2/: CMakeLists.txt  newTarget2.cpp  newTarget2.h
CMake/CMake-Nested_Directories/subDir/subDir2/subDir3/: CMakeLists.txt  newTarget3.cpp  newTarget3.h
CMake/RandomExamples/: CMakeLists.txt  buildAll.sh  main.cpp
CMake/RandomExamples/executables/: Shared.out  Shared1.out  Shared2.out  Static.out  readme.txt
CMake/RandomExamples/include/: math.h  secret.h
CMake/RandomExamples/src/: math.cpp
CtypesExample/: CMakeLists.txt  MyCtypes.py  main.cpp  myLibraries.cpp
DesignPatterns/: BuilderPattern.cpp
GoogleMockExample/: CMakeLists.txt  main.cpp  setup.sh
SFMLExample/: README.txt  compileAndRun.bash  executable.out  main.cpp
SQL/: Notes.txt  postgres_with_cpp.cpp
Unit_Test_Example/: Readme.md  sourceCode.cpp  sourceCode.h
Unit_Test_Example/UnitTest++/: CMakeLists.txt  UnitTest++.cpp  main.cpp
Unit_Test_Example/googleTest/: CMakeLists.txt  gTests.cpp
Unit_Test_Example/vanillaTest/: CMakeLists.txt  testHarness.cpp  unitTests.h
